--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
-
+uses-material-design: true
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
@@ -12,11 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   cupertino_icons: ^1.0.2
   onboarding: ^2.1.0
   introduction_screen: ^2.1.0
-  speedometer: ^1.0.1
+  sizer: ^2.0.13
+  syncfusion_flutter_gauges: ^19.2.56
 
 dev_dependencies:
   flutter_test:
